Refactor Problem solver